--- a/niudot-app/src/assets/tailwind.css
+++ b/niudot-app/src/assets/tailwind.css
@@ -8,11 +8,12 @@
 
 html, body {
 	width: 100%;
+	height: 100%;
 	font-family: 'Nunito Sans', sans-serif;	
 }
 
 #root, #root > div {
-	min-height: 100vh;
+	height: 100%;
 }
 
 /* ================ */
