--- a/niudot-app/src/assets/tailwind.css
+++ b/niudot-app/src/assets/tailwind.css
@@ -210,3 +210,17 @@ html, body {
 .checkbox-description:last-child {
 	border-bottom: none;
 }
+
+.alerts-container {
+	@apply fixed top-20 right-4 z-10 flex flex-col items-end gap-4;
+}
+
+.alert {
+	/*Estas son las alertas que van a aparecer como toast. Las genera Formik, yo solo las muestro.*/
+
+	/*Global*/
+	@apply p-4 border-2 border-solid rounded  text-red-400 font-bold underline border-red-400 shadow-md;
+
+	/*Light Theme Defaults*/
+	@apply bg-white;
+}
