--- a/niudot-app/src/assets/tailwind.css
+++ b/niudot-app/src/assets/tailwind.css
@@ -115,6 +115,10 @@ html, body {
 	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-500;
 }
 
+.form-field-error {
+	@apply border-red-500 !important;
+}
+
 .form-container-xs {
 	@apply col-span-2;
 
@@ -219,7 +223,7 @@ html, body {
 	/*Estas son las alertas que van a aparecer como toast. Las genera Formik, yo solo las muestro.*/
 
 	/*Global*/
-	@apply p-4 border-2 border-solid rounded  text-red-400 font-bold underline border-red-400 shadow-md;
+	@apply px-4 py-3 border-2 border-solid rounded  text-red-400 font-bold underline border-red-400 shadow-md;
 
 	/*Light Theme Defaults*/
 	@apply bg-white;
