Este es el row element muere carlos vive carlos nomuercarlosvivecarlos.js

--- a/niudot-app/src/assets/tailwind.css
+++ b/niudot-app/src/assets/tailwind.css
@@ -209,3 +209,13 @@ html, body {
 	/*Light Theme Defaults*/
 	@apply bg-white;
 }
+
+
+td {
+	border-right: 2px solid;
+	@apply border-gray-200;
+}
+
+td:last-child {
+	border: none;
+}
