--- a/niudot-app/src/styles/sidebar.css
+++ b/niudot-app/src/styles/sidebar.css
@@ -1,4 +1,4 @@
--webkit-keyframes swing {
+@-webkit-keyframes swing {
   0%,
   30%,
   50%,
@@ -53,6 +53,7 @@
 }
 
 .pro-sidebar {
+  color: white;
   height: 100%;
   width: 256px;
   min-width: 256px;
@@ -64,6 +65,7 @@
 }
 
 .pro-sidebar > .pro-sidebar-inner {
+  background: #151618;
   height: 100%;
   position: relative;
   z-index: 101;
@@ -99,7 +101,7 @@
 }
 
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-header {
-  /*border-bottom: 1px solid rgba(255, 255, 255, 0.2);*/
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-content {
@@ -306,6 +308,7 @@
 
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
   position: relative;
+  background-color: #212226;
 }
 
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
@@ -329,6 +332,7 @@
 }
 
 .pro-sidebar .pro-menu a:hover {
+  color: #3B82F6;
 }
 
 .pro-sidebar .pro-menu .pro-menu-item {
@@ -336,6 +340,7 @@
 }
 
 .pro-sidebar .pro-menu .pro-menu-item.active {
+  color: #3B82F6;
 }
 
 .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
@@ -368,6 +373,7 @@
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:focus {
   outline: none;
+  color: #3B82F6;
 }
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
@@ -400,6 +406,10 @@
           flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
+}
+
+.pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
+  color: #3B82F6;
 }
 
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
@@ -652,17 +662,8 @@
   display: none;
 }
 
-@keyframes swing {
-  0%, 30%, 50%, 70%, 100% {
-  }
-  10% {
-  }
-  40% {
-  }
-  60% {
-  }
-  80% {
-  }
+li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
+  background-color: yellow;
 }
 
 .pro-sidebar {
@@ -671,6 +672,10 @@
 
 .pro-sidebar-inner ::-webkit-scrollbar {
   width: 0;
+}
+
+.pro-menu-item {
+  font-size: 1rem !important;
 }
 
 .pro-sidebar-header {
@@ -686,6 +691,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #151618 !important;
+  color: white;
   border-bottom: none !important;
   z-index: 10;
 }
@@ -698,3 +705,42 @@
   -webkit-transition: background-color 75ms;
   transition: background-color 75ms;
 }
+
+.sidebar-item:hover {
+  background-color: pink;
+}
+
+.pro-inner-list-item .pro-inner-item {
+  color: #CFCFD0;
+}
+
+.pro-inner-list-item .pro-inner-item:hover {
+  color: #2563EB !important;
+}
+
+.custom-overlay {
+  position: fixed;
+  z-index: 20;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 0, 0.5);
+}
+
+#root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.sm > div.pro-sidebar-inner > div > div.pro-sidebar-content.tw-sidebar > nav > ul > li > div.pro-inner-item {
+  color: white;
+  -webkit-transition: background 75ms;
+  transition: background 75ms;
+}
+
+#root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.sm > div.pro-sidebar-inner > div > div.pro-sidebar-content.tw-sidebar > nav > ul > li > div.pro-inner-item:hover {
+  background: #2563EB;
+}
+
+#root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.dark.sm > div.pro-sidebar-inner > div > div.pro-sidebar-content.tw-sidebar {
+  background: #151618;
+}
+
+#root > div > div > div.pro-sidebar.fixed.w-64.shadow-md.sm > div.pro-sidebar-inner > div > div.pro-sidebar-header.tw-sidebar.flex-col-center > h2 {
+  color: white;
+}
+/*# sourceMappingURL=pro-sidebar.css.map */
