I deserve a raise, I fixed the sidebar animation problem (I caused)

--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -227,7 +227,7 @@ html, body {
 
 .pro-sidebar {
 	/*Global*/
-	@apply font-bold text-white transition;
+	@apply font-bold text-white;
 
 	/*Light Theme Defaults*/
 	@apply bg-blue-500;
