--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -296,9 +296,9 @@ html, body {
 }
 
 .table thead th {
-	@apply align-bottom;
+	@apply align-bottom border-2;
 
 	@apply border-gray-cstm-14;
 
-	@apply dark:dark:border-b-2 border-gray-cstm-12;
+	@apply dark:border-gray-cstm-2;
 }
