FormDropdownInput integrated with tables and also modified with props.children

--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -298,7 +298,7 @@ html, body {
 .table thead th {
 	@apply align-bottom border-b-2;
 
-	@apply border-gray-cstm-14;
+	@apply border-gray-200;
 
-	@apply dark:border-gray-cstm-2;
+	@apply dark:border-gray-cstm-12;
 }
