Creacon de componente CancelacionAnticipada y modificacion de rutas para caja

--- a/niudot-app/src/styles/sidebar.css
+++ b/niudot-app/src/styles/sidebar.css
@@ -679,9 +679,12 @@
 
 .pro-sidebar-content {
   margin-top: 4rem;
+  overflow-wrap: break-word;
 }
 
 .sidebar-item {
   -webkit-transition: background-color 75ms;
   transition: background-color 75ms;
+  overflow-wrap: break-word;
+
 }
