Cancelacion Anticipada ya con FormInitialValues, ultimo push before merge

--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -266,7 +266,12 @@ html, body {
 
 	/*Dark Theme Defaults*/
 	@apply dark:bg-blue-500;
+
 }
+
+.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul > li {
+	@apply bg-blue-600 break-words;
+  }
 
 .pro-menu-item > .pro-inner-item > .pro-item-content {
 	/*Esta clase maneja todo lo que es texto en cada uno de los elementos de la lista de links en el sidebar. Todos, incluidos los que estan en submenus.*/
