--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -27,10 +27,10 @@ html, body {
 	/*Esta clase se utiliza exclusivamente para el fondo de la pagina.*/
 
 	/*Light Theme Defaults*/
-	@apply bg-white;
+	@apply bg-gray-100;
 
 	/*Dark Theme Defaults*/
-	@apply dark:bg-gray-cstm-0;
+	@apply dark:bg-gray-cstm-1;
 }
 
 .bg-blue-blue {
@@ -104,6 +104,9 @@ html, body {
 
 	/*Light Theme Defaults*/
 	@apply bg-white;
+
+	/*Dark Theme Defaults*/
+	@apply dark:bg-gray-cstm-2;
 }
 
 .table-section {
@@ -111,6 +114,10 @@ html, body {
 	@apply rounded mx-auto max-w-min py-8 px-8 mb-4;
 	/*Light Theme Defaults*/
 	@apply bg-white;
+
+	/*Dark Theme Defaults*/
+
+	@apply dark:bg-gray-cstm-2;
 
 }
 
@@ -132,7 +139,7 @@ html, body {
 	@apply focus:bg-gray-100 focus:border-gray-cstm-14;
 
 	/*Dark Theme Defaults*/
-	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-1 dark:border-gray-cstm-2 placeholder-gray-cstm-10;
+	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-1 dark:border-gray-cstm-4 placeholder-gray-cstm-10;
 
 	/*Dark Theme Pseudo-Classes*/
 	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-500;
