--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -269,7 +269,7 @@ html, body {
 	@apply focus:bg-gray-100 focus:border-gray-cstm-14;
 
 	/*Dark Theme Defaults*/
-	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-1 dark:border-gray-cstm-12 placeholder-gray-cstm-10;
+	@apply dark:text-gray-cstm-15 dark:bg-gray-cstm-1 dark:border-gray-cstm-12 placeholder-gray-cstm-10;
 
 	/*Dark Theme Pseudo-Classes*/
 	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-500;
@@ -282,3 +282,15 @@ html, body {
 
 	@apply dark:border-gray-cstm-12;
 }
+
+.popup-content {
+	@apply bg-transparent border-transparent max-w-min max-h-screen overflow-y-auto;
+  }
+
+  [role='tooltip'].popup-content {
+	@apply mx-auto;
+  }
+
+  .modal-body {
+	@apply max-h-screen	overflow-y-auto;
+  }
