Cancel button functionality and responsive popup

--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -121,6 +121,18 @@ html, body {
 
 }
 
+.table-section-popup {
+
+	@apply rounded mx-auto max-w-min py-8 mb-4;
+	/*Light Theme Defaults*/
+	@apply bg-white;
+
+	/*Dark Theme Defaults*/
+
+	@apply dark:bg-gray-cstm-2;
+
+}
+
 .form-grid-layout {
 	/*Esta es la clase que aplican para hacer una nueva seccion que contiene un formulario. Esa seccion que contiene las casillas de texto o lo que sea (la que las contiene a todas), ya que aca se definen las propiedades del grid.*/
 	@apply mt-2 grid grid-cols-12 gap-2;
@@ -284,7 +296,7 @@ html, body {
 }
 
 .popup-content {
-	@apply bg-transparent border-transparent max-w-min max-h-screen overflow-y-auto;
+	@apply bg-transparent border-transparent max-w-min max-h-screen overflow-y-auto min-w-full;
   }
 
   [role='tooltip'].popup-content {
