--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -153,7 +153,7 @@ html, body {
 	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-2 dark:border-gray-cstm-4 placeholder-gray-cstm-10;
 
 	/*Dark Theme Pseudo-Classes*/
-	@apply dark:focus:bg-gray-cstm-2 dark:focus:border-blue-700;
+	@apply dark:focus:bg-gray-cstm-3 dark:focus:border-gray-cstm-5;
 }
 
 .form-field-error {
