--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -27,10 +27,16 @@ html, body {
 	/*Esta clase se utiliza exclusivamente para el fondo de la pagina.*/
 
 	/*Light Theme Defaults*/
-	@apply bg-gray-100;
+	@apply bg-white;
 
 	/*Dark Theme Defaults*/
 	@apply dark:bg-gray-cstm-1;
+}
+
+.bg-gray-gray {
+	@apply bg-gray-100;
+
+	@apply dark:bg-gray-cstm-2;
 }
 
 .bg-blue-blue {
@@ -100,13 +106,13 @@ html, body {
 	/*Esta clase es para la seccion mas general de cada formulario, es el fondo blanco que centra todo su contenido, dentro de este contenedor generalmente van los formulario en si, cada uno de ellos, y su contenedor grid respectivo (usando la clase .form-grid-layout).*/
 
 	/*Global*/
-	@apply rounded mx-auto max-w-2xl p-4;
+	@apply rounded mx-auto max-w-2xl p-4 shadow-md;
 
 	/*Light Theme Defaults*/
 	@apply bg-white;
 
 	/*Dark Theme Defaults*/
-	@apply dark:bg-gray-cstm-2;
+	@apply dark:bg-gray-cstm-1;
 }
 
 .table-section {
@@ -144,10 +150,10 @@ html, body {
 	@apply text-sm h-std p-2 rounded outline-none border-2 border-solid;
 
 	/*Light Theme Defaults*/
-	@apply text-black bg-white border-gray-200;
+	@apply text-black bg-gray-100 border-gray-200;
 
 	/*Light Theme Pseudo-Classes*/
-	@apply focus:bg-gray-100 focus:border-gray-cstm-14;
+	@apply focus:bg-gray-200 focus:border-gray-cstm-13;
 
 	/*Dark Theme Defaults*/
 	@apply dark:text-gray-cstm-14 dark:bg-gray-cstm-2 dark:border-gray-cstm-4 placeholder-gray-cstm-10;
