--- a/niudot-app/src/styles/tailwind.css
+++ b/niudot-app/src/styles/tailwind.css
@@ -7,13 +7,15 @@
 /* ==== GLOBAL ==== */
 /* ================ */
 
-html, body {
+html,
+body {
 	width: 100%;
 	height: 100%;
-	font-family: 'Nunito Sans', sans-serif;
+	font-family: "Nunito Sans", sans-serif;
 }
 
-#root, #root > div {
+#root,
+#root > div {
 	height: 100%;
 }
 
@@ -72,7 +74,7 @@ html, body {
 	@apply text-black;
 
 	/*Dark Theme Defaults*/
-	@apply dark:text-white
+	@apply dark:text-white;
 }
 
 .text-gray-gray {
@@ -131,11 +133,9 @@ html, body {
 	/*Dark Theme Defaults*/
 
 	@apply dark:bg-gray-cstm-2;
-
 }
 
 .table-section-popup {
-
 	@apply rounded mx-auto max-w-min py-8 mb-4;
 	/*Light Theme Defaults*/
 	@apply bg-white;
@@ -143,7 +143,6 @@ html, body {
 	/*Dark Theme Defaults*/
 
 	@apply dark:bg-gray-cstm-2;
-
 }
 
 .form-grid-layout {
@@ -276,10 +275,16 @@ html, body {
 
 	/*Dark Theme Defaults*/
 	@apply dark:bg-blue-600;
-
 }
 
-.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul > li {
+.pro-sidebar
+	.pro-menu
+	> ul
+	> .pro-sub-menu
+	> .pro-inner-list-item
+	> div
+	> ul
+	> li {
 	/*Light Theme Defaults*/
 	@apply bg-blue-600;
 
@@ -320,11 +325,11 @@ tr:nth-child(even) > td {
 	@apply dark:bg-gray-cstm-4;
 }
 
-tr:last-child > td:first-child{
+tr:last-child > td:first-child {
 	@apply rounded-bl;
 }
 
-tr:last-child > td:last-child  {
+tr:last-child > td:last-child {
 	@apply rounded-br;
 }
 
