--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 html,
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 
 .flex-center {
@@ -18,7 +18,6 @@ body {
 }
 
 .form-input {
-	@apply px-2 py-1 rounded shadow-sm border border-gray-200 transition;
-	@apply outline-none;
-	@apply focus:placeholder-gray-200;
+	@apply p-2 rounded shadow-sm transition outline-none;
+	@apply text-gray-200 focus:text-gray-500 focus:placeholder-gray-200;
 }
