--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 html,
 body {
-	font-family: 'Lato', sans-serif;
+	font-family: 'Poppins', sans-serif;
+	width: 100%;
+	height: 100%;
 }
 
 .flex-center {
@@ -17,11 +19,35 @@ body {
 	@apply p-4 bg-white rounded shadow-sm;
 }
 
-.form-input {
-	@apply p-2 rounded transition outline-none;
-	@apply bg-transparent text-gray-200 focus:text-gray-500 focus:placeholder-gray-200;
-}
-
 .disabled {
 	@apply bg-gray-100 text-gray-300;
+}
+
+.form-input {
+	@apply p-2 rounded transition outline-none;
+	@apply bg-transparent text-gray-500 text-sm placeholder-gray-400 focus:placeholder-gray-200;
+}
+
+@layer utilities {
+	@variants responsive {
+		.fc-xs {
+			@apply col-span-3;
+		}
+
+		.fc-sm {
+			@apply col-span-4;
+		}
+
+		.fc {
+			@apply col-span-6;
+		}
+
+		.fc-md {
+			@apply col-span-8;
+		}
+
+		.fc-lg {
+			@apply col-span-12;
+		}
+	}
 }
