--- a/styles/index.css
+++ b/styles/index.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 html,
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+		'Segoe UI Symbol';
+	width: 100%;
+	height: 100%;
+}
+
+#__next {
 	width: 100%;
 	height: 100%;
 }
@@ -15,23 +22,11 @@ body {
 	@apply flex justify-center items-center;
 }
 
-.wrapper {
-	@apply p-4 bg-white rounded shadow-sm;
+.form-section {
+	@apply p-4 bg-white rounded shadow;
 }
 
-.no-label {
-	@apply flex flex-col justify-end;
-}
-
-.disabled {
-	@apply bg-gray-100 text-gray-300;
-}
-
-.form-input {
-	@apply p-2 rounded transition outline-none;
-	@apply bg-transparent text-gray-500 text-sm placeholder-gray-400 focus:placeholder-gray-200;
-}
-
+/* Classes encargadas de determinar el posicionamiento de los contenedores de cada input, independientemente del tipo de esta. Anteriormente teniamos clases que se encargaban directamente de lo responsive. Ahora simplemente utilizamos las queries de Tailwind para determinar nosotros mismos el comportamiento responsive. */
 @layer utilities {
 	@variants responsive {
 		.fc-xs {
@@ -53,5 +48,16 @@ body {
 		.fc-lg {
 			@apply col-span-12;
 		}
+	}
+}
+
+/* Classes tambien encargas de los estilos de las inputs en si. La mayoria estan aplicadas por defecto en los componentes de cada uno de los tipos de input, pero pueden ser utilizadas de manera modular e independiente. */
+@layer utilities {
+	.form-input {
+		@apply w-full block p-2 text-sm rounded-md outline-none;
+	}
+
+	.form-input-border {
+		@apply border border-gray-300 focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 shadow-sm;
 	}
 }
