--- a/styles/index.css
+++ b/styles/index.css
@@ -54,7 +54,7 @@ body {
 /* Classes tambien encargas de los estilos de las inputs en si. La mayoria estan aplicadas por defecto en los componentes de cada uno de los tipos de input, pero pueden ser utilizadas de manera modular e independiente. */
 @layer utilities {
 	.form-input {
-		@apply w-full block p-2 text-sm rounded-md outline-none;
+		@apply p-2 text-sm rounded-md outline-none;
 	}
 
 	.form-input-border {
