--- a/styles/index.css
+++ b/styles/index.css
@@ -104,7 +104,7 @@ a.anchor {
 
 @layer utilities {
 	.alert {
-		@apply rounded border last:mb-4 text-sm p-2;
+		@apply rounded border last:mb-4 text-sm p-2 flex items-center;
 	}
 
 	.alert-success {
