--- a/styles/index.css
+++ b/styles/index.css
@@ -119,3 +119,7 @@ a.anchor {
 .nav-link {
 	@apply hover:bg-gray-50 hover:text-primary transition duration-100 text-sm text-gray-600  transition-colors duration-100 hover:text-gray-800 border-l-4 border-transparent hover:border-indigo-500;
 }
+
+.break-line {
+	@apply col-start-1 !important;
+}
