--- a/styles/index.css
+++ b/styles/index.css
@@ -10,12 +10,12 @@ body {
 		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
 		'Segoe UI Symbol';
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 }
 
 #__next {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 }
 
 .flex-center {
