--- a/styles/index.css
+++ b/styles/index.css
@@ -2,13 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@font-face {
+	font-family: 'Inter';
+	font-weight: 100 900;
+	src: url(/fonts/inter-var-latin.woff2) format('woff2');
+}
 
 html,
 body {
-	font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-		'Segoe UI Symbol';
 	width: 100%;
 	height: 100%;
 }
