--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,10 @@
 	src: url(/fonts/inter-var-latin.woff2) format('woff2');
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 html,
 body {
 	width: 100%;
